--- a/build.gradle
+++ b/build.gradle
@@ -26,14 +26,22 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+	// ✅ Stack Reactivo: WebFlux para el controlador y Netty como servidor embebido
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+	// ✅ Stack Reactivo: R2DBC para el acceso a datos no-bloqueante
+	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
+
+	// ✅ Stack Reactivo: Driver R2DBC para la base de datos H2
+	runtimeOnly 'io.r2dbc:r2dbc-h2'
+
+	// --- Dependencias que se mantienen ---
+	implementation 'org.mapstruct:mapstruct:1.6.3' // MapStruct sigue siendo compatible
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
-	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3' // Es necesario añadir el procesador de MapStruct
+
+	// --- Dependencias de Test ---
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
